# FOSC-X

./: .gitignore  LICENSE  README.md  pyproject.toml
Experiments/: Synthetic.ipynb  SyntheticEvaluation.ipynb
docs/: PlotExamples.ipynb  PlotExamplesUpdated.ipynb  PlotFunctions.py  Tree_formats.rst  advanced.rst  algorithm.rst  basic_usage.rst  conf.py  index.rst  input_processing.rst  modules.rst  parameters.rst  performance.rst  quality.rst  visualisation.rst  visualiszation.rst
src/foscx/: __init__.py  _numba.py  efosc.py  foscx.py  hierarchy.schema.json
src/foscx.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/foscx/hierarchy/: B3Measure.py  cluster_bounds.py  condense_tree.py  constraint_score.py  hierarchy.py  modularity.py  pfce.py  tree_build.py  tree_numba.py
src/foscx/plotting/: cluster_tree_proxy.py  plot_functions.py  plot_tree_functions.py
tests/: conftest.py  test_JSON.py  test_agglomerative.py  test_efosc_basic.py  test_fosc_error_handling.py  test_hdbscan.py  test_imports.py  test_scipy_linkage.py
